# pcd

./: .gitattributes  AGENTS.md  CONTRIBUTING.md  Makefile  README.md
doc/: document-template.tex  executive-brief.md  spec-composition.md  technical-reference.md  user-guide.md  whitepaper.md
doc/comparisons/: PCD-vs-Codeplain-Plain.md
examples/: README.md  account-transfer.md
examples/calc-interest/code/rs/: Cargo.toml  LICENSE  Makefile  README.md  TRANSLATION_REPORT.md  calc-interest.1.md  calc-interest.spec
examples/calc-interest/code/rs/debian/: changelog  control  copyright  rules
examples/calc-interest/code/rs/src/: main.rs
examples/calc-interest/code/rs/tests/: independent_tests.rs
examples/calc-interest/code/rs/translation_report/: translation-workflow.pikchr
hints/: README.md  abap-report.abap.style.hints.md  cli-tool.cpp.milestones.hints.md  mcp-server.go.mcp-go.hints.md
prompts/: README-interview.md  interview-prompt.md  prompt.md  reviewer.md  security-reviewer.md  tiebreaker.md
scripts/: gen-known-templates-count.sh  gen-known-templates.sh  materialise-prompt.sh  replace-auto-block.sh
templates/: README.md  abap-report.template.md  backend-service.template.md  cli-tool.cpp.milestones.hints.md  cli-tool.template.md  cloud-native.template.md  cockpit-module.template.md  gui-tool.template.md  kubectl-style-cli.template.md  library-c-abi.template.md  mcp-server.template.md  project-manifest.template.md  python-tool.template.md  verified-library.template.md
tools/: README.md
tools/pcd-templates/: Makefile  (+1 more)
whitepaper/: whitepaper.md
(+169 files in other folders)
